@startuml
hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

class CuentaBancaria {
  - cbu   : String
  - saldo : double
  --
  - clave   : ClaveSeguridad
  - titular : Titular
}

class ClaveSeguridad {
  - codigo             : String
  - ultimaModificacion : String
}

class Titular {
  - nombre : String
  - dni    : String
  --
  - cuenta : CuentaBancaria
}

' Composición 1:1
CuentaBancaria "1" *-- "1" ClaveSeguridad : clave

' Asociación 1:1 (bidireccional)
CuentaBancaria "1" -- "1" Titular : titular/cuenta
@enduml
